maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:8: error: not found: value gauch
		gauch();
                ^