maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
def keepHandOnSideWall() {
	gauche();
	while (!(estFaceMur())) {
		droite();
		avance();
		gauch();
	}
}

keepHandOnSideWall();
}
